[tool.poetry]
name = "ostatslib"
version = "0.5.1"
description = "Open Statistical Analysis Agent Library"
authors = ["Guilherme <g.lisboa.oliveira@outlook.com>"]
repository = "https://github.com/OStatsAA/ostatslib"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.3"
pandas = "^2.2.0"
statsmodels = "^0.14.1"
scipy = "^1.11.4"
scikit-learn = "^1.4.0"
tabulate = "^0.9.0"
datacooker = "^0.4.1"
tensorboard = "^2.15.1"
stable-baselines3 = "^2.2.1"
pmlb = "^1.0.1.post3"
kneed = "^0.8.5"
statsforecast = "^1.7.1"
datasetsforecast = "^0.0.8"
torch = "2.2.1"
wrapt-timeout-decorator = "^1.4.0"
xgboost = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pylint = ">=2.15.4,<4.0.0"
autopep8 = ">=1.7,<3.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1.3,<9.0.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.docs.dependencies]
jupyter-book = ">=0.15,<1.1"
pydata-sphinx-theme = ">=0.13.3,<0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pylint]
disable=["R0903"] # disables too-few-public-methods